# AICONTKRN-CHORUS

./: CHORUS_DESIRES.md  CHORUS_TRANSFER_CAPSULE.md  EVOLVE_SELF_CODING.md  pyproject.toml
chorus/: __init__.py  __main__.py  cli.py  continuity.py  daemon.py  dialogue.py  evolution.py  expansion.py  ledger.py  state.py
tests/: test_cli.py  test_continuity.py  test_daemon.py  test_dialogue.py  test_evolution.py  test_expansion.py  test_ledger.py  test_state.py
