[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chorus"
version = "0.1.0"
description = "CHORUS continuity tooling"
requires-python = ">=3.10"

[project.scripts]
chorus = "chorus.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
